# FinanceCLI

./: .gitignore  CHANGELOG.md  EXAMPLES.md  MANIFEST.in  README.md  SECURITY.md  llms.txt  openapi.json  pyproject.toml  tools.json
.github/workflows/: ci.yml  docs.yml  release.yml
docs-site/: astro.config.mjs  package-lock.json  package.json
docs-site/public/: llms-full.txt  openapi.json  tools.json
docs-site/src/styles/: custom.css
finance_cli/: __init__.py  schemas.py
finance_cli/backtesting/: __init__.py  portfolio.py  result_shaping.py  vectorbt_engine.py
finance_cli/cli/: __init__.py  args.py  formatting.py  main.py  registry.py
finance_cli/cli/commands/: __init__.py  backtest.py  calendar.py  document.py  estimates.py  filings.py  formula.py  ir.py  (+14 more)
finance_cli/core/: __init__.py  common.py  market.py  symbols.py
finance_cli/providers/: __init__.py  alpaca.py  alphavantage.py  base.py  camelot_tables.py  company_ir.py  config.py  fmp.py  fuzzy_terms.py  gdelt.py  historical.py  html_document.py  native_pdf.py  paddle_ocr.py  transcripts.py  yahoo.py
finance_cli/services/: __init__.py  backtest.py  calendar.py  document_match.py  documents.py  estimates.py  filings.py  formulas.py  fundamentals.py  ir.py  kpi.py  market_data.py  news.py  price.py  research.py  screen.py  sectors.py  sources.py  symbols.py  transcripts.py  valuation.py
finance_cli/tools/: __init__.py  formatting.py  market.py  symbol.py  types.py
schemas/: finance-cli-tools.schema.json
scripts/: generate_cli_docs.py  package_skills.py
skills/finance-cli/: SKILL.md
tests/: test_cli_smoke.py  test_finance_architecture.py  test_presentation_fuzzy_thresholds.py  test_skill_packaging.py
(+54 files in other folders)
