[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finance-cli"
version = "0.1.0b0"
description = "Finance CLI for public-company research, filings, documents, market data, valuation helpers, and backtests."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "TempestShaw" },
]
keywords = ["finance", "cli", "sec", "edgar", "valuation", "backtesting", "vectorbt"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "beautifulsoup4>=4.10.0",
    "camelot-py>=0.11.0",
    "edgartools>=5.30.0",
    "httpx>=0.27.0",
    "paddleocr[doc-parser]>=3.5.0",
    "paddlepaddle>=3.3.0",
    "pypdf>=4.0.0",
    "PyMuPDF>=1.24.0",
    "rapidfuzz>=3.0.0",
    "rich>=13.0.0",
    "vectorbt>=1.0.0",
    "yfinance>=0.2.66",
]

[project.optional-dependencies]
dev = [
    "build>=1.2.0",
    "pytest>=8.0.0",
    "tomli>=2.0.0; python_version < '3.11'",
    "twine>=5.0.0",
]

[project.scripts]
finance = "finance_cli.cli:main"

[project.urls]
Homepage = "https://github.com/TempestShaw/FinanceCLI"
Repository = "https://github.com/TempestShaw/FinanceCLI"

[tool.setuptools.packages.find]
include = ["finance_cli*"]
